# ssm_logger

./: CMakeLists.txt  README.md  meson.build
src/: main.cpp
